added:link to return back to main page

--- a/recipes/mashroom.html
+++ b/recipes/mashroom.html
@@ -26,5 +26,7 @@
         <li>blow the fire steam. and put chicken pieces on fire</li>
         <li>put some oil on chicken so it's cook well</li>
     </ol>
+
+    <a href="index.html"> Return Back</a>
 </body>
 </html>
